# yagpt_video_to_text

./: .gitignore  .gitmodules  dl.py  gpt.py  iam_gen.py  json_to_text.py  main.py  pyproject.toml  upload.py  video_to_audio.py  video_to_text.py
yagpt_video_to_text/: Cargo.toml  build.rs  readme.md
yagpt_video_to_text/src/: cloud_operation.rs  config.rs  convert_video_to_audio.rs  download_video.rs  gpt_processor.rs  iam_generator.rs  main.rs  markdown_to_html.rs  speech_to_text.rs  telegram.rs  telegram_executor.rs  upload.rs  video_to_text.rs
