[package]
name = "yagpt_video_to_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
tonic = { version = "0.11", features = ["tls", "tls-roots", "codegen"] }
prost = "0.12"
prost-types = "0.12"
youtube_dl = { version = "0.10", features = ["tokio"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.25.0"
http-body = "0.4.4"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
